2006-05-05  Alexander Olk  <alex.olk@googlemail.com>

	* MimeIcon.cs: for is faster than foreach for strings.

2006-05-05  Mike Kestner  <mkestner@novell.com>

	* CheckedListBox.cs: update check handling code to not use selected.
	* ListBox.cs: rewrite of mouse selection handling to correspond to MS
	behavior for visual feedback, motion response, shift/ctrl handling,
	and properly deal with all 4 selection modes. Updates to bounds
	handling logic.  Add scroll wheel support. [Fixes #77842]

2006-05-05  Peter Dennis Bartok  <pbartok@novell.com> 

	* ListView.cs:
	  - Moved adding of Implicit controls into .ctor. That way, subsequent
	    creation of the controls will not cause them to think they are 
	    toplevel windows (fixes #78200 header problem)
	  - Added 2.0 ShowGroups and UseCompatibleStateImageBehaviour
	  - Switched visibility setting of header control to use internal field
	    to avoid triggering handle creation
	  - Now checking if handle is created before causing a refresh when items
	    are added (This makes us now match handle creation time with MS)
	* Splitter.cs: Removed loading of private splitter cursor, switched to
	  Cursors version now that that is loading the right ones
	* Cursors.cs: Load proper splitter cursors from resources
	* Cursor.cs: Added second method of loading resource cursors for the 
	  VS.Net users amongst us

2006-05-05  Mike Kestner  <mkestner@novell.com>

	* ListView.cs: give header_control a minimum size based on the
	ListView size.

2006-05-05  Peter Dennis Bartok  <pbartok@novell.com> 

	* XplatUIX11.cs: WS_EX_TOPMOST requires window to be on top. A dock
	  window seems to do that with metacity, so set that type. (#78120)

2006-05-05  Mike Kestner  <mkestner@novell.com>

	* ListViewItem.cs: fix Details mode checkbox layout bug.
	* ThemeWin32Classic.cs: draw a ListView column header for unused space
	at the end of the header, if it exists. [Fixes for #78200]

2006-05-04  Jackson Harper  <jackson@ximian.com>
